--- a/warehouse-management-web/public/manifest.json
+++ b/warehouse-management-web/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "仓库管理",
+  "name": "仓库管理",
   "icons": [
     {
       "src": "favicon.ico",
